--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Osama Esmail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="public/OE.ico">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Website</a>
+            <a class="navbar-brand" href="#">Osama Esmail</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -31,9 +33,11 @@
         <img src="public/Me.jpg" alt="Your Image" class="img-fluid rounded-circle">
         <h1 class="mt-3">About Me</h1>
         <p>I'm Osama Esmail, and I'm a software development engineer at Microsoft working on Azure Linux.
-I also enjoy working on data and web driven side projects, and they keep me up to date.
-I also enjoy following professional sports (especially NBA, NFL, and MLB), bargain hunting for new hobbies (like ice cream making!), and gaming (lately big on Horizon Zero Dawn).
-This website is a perpetual WIP, so there will be some changes and things moved around. Welcome to my personal website!</p>
+            I also enjoy working on data and web driven side projects, and they keep me up to date.
+            I also enjoy following professional sports (especially NBA, NFL, and MLB), bargain hunting for new hobbies
+            (like ice cream making!), and gaming (lately big on Horizon Zero Dawn).
+            This website is a perpetual WIP, so there will be some changes and things moved around. Welcome to my
+            personal website!</p>
     </section>
 
     <section id="projects" class="container mt-5">
@@ -55,8 +59,9 @@ This website is a perpetual WIP, so there will be some changes and things moved 
                     <img src="public/nba_logo.png" class="card-img-top" alt="NBA Logo">
                     <div class="card-body">
                         <h5 class="card-title">NBA Betting Bot</h5>
-                        <p class="card-text">Developed a custom heuristic for calculating win probability & expected returns on NBA moneyline bets.
-Written in Python 3.</p>
+                        <p class="card-text">Developed a custom heuristic for calculating win probability & expected
+                            returns on NBA moneyline bets.
+                            Written in Python 3.</p>
                         <a class="btn btn-primary">Code is private due to profit</a>
                     </div>
                 </div>
@@ -88,4 +93,5 @@ Written in Python 3.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
