updating site info

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section id="home" class="container text-center mt-5">
         <img src="public/Me.jpg" alt="Your Image" class="img-fluid rounded-circle">
         <h1 class="mt-3">About Me</h1>
-        <p>I'm Osama Esmail, and I'm a software development engineer at Microsoft working on Azure Linux.
+        <p>I'm Osama Esmail, and I'm a software development engineer formerly working on Azure Linux at Microsoft.
             I also enjoy working on data and web driven side projects, and they keep me up to date.
             I also enjoy following professional sports (especially NBA, NFL, and MLB), bargain hunting for new hobbies
-            (like ice cream making!), and gaming (lately big on Horizon Zero Dawn).
+            (like ice cream making!), and gaming (lately big on Civilization 6).
             This website is a perpetual WIP, so there will be some changes and things moved around. Welcome to my
             personal website!</p>
     </section>
